# actix-simple-service

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  db_scheme.drawio  docker-compose.yml
actix-service-guide/: book.toml  custom.css
actix-service-guide/book/: 404.html  index.html  print.html  references.html  searchindex.js  setup_docker.html  toc.html  toc.js
actix-service-guide/src/: SUMMARY.md  references.md
doc-guide/: custom.css
doc-guide/book/: index.html  references.html  toc.js
doc-guide/src/: SUMMARY.md  introduction.md  template.md
doc-template/: book.toml  custom.css  openapi.json  script.js
doc-template/book/: 404.html  format.html  index.html  introduction.html  print.html  references.html  sample.html  searchindex.js  toc.html  toc.js
doc-template/src/: SUMMARY.md  format.md  sample.md
main_crate/: Cargo.toml
main_crate/src/: error.rs  main.rs
main_crate/src/queries/: bundle.rs  mod.rs  product.rs  user.rs
main_crate/src/routes/: admin.rs  auth.rs  bundle.rs  home.rs  mod.rs  product.rs  user.rs  util.rs
main_crate/src/tests/: mod.rs
middleware/: Cargo.toml
middleware/src/: lib.rs
migrations/: 20250714101802_init.down.sql  20250714101802_init.up.sql  20250716060649_e-commerce.down.sql  20250716060649_e-commerce.up.sql  init_tables.sql
types/: Cargo.toml
types/src/: app_state.rs  lib.rs
types/src/models/: e_commerce.rs  init.rs  mod.rs  user.rs
types/src/payload/: admin.rs  bundle.rs  mod.rs  product.rs
types/src/schemas/: json.rs  mod.rs  product.rs  queried.rs  query.rs
types/src/utils/: mod.rs
(+27 files in other folders)
